# CSE-3.5-Capstone-Fall-Detection

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  CHECKLIST.md  CMakeLists.txt  CONTRIBUTING.md  ESP32_BUTTON_CONTROLLER.md  EXPECTED_OUTPUT.md  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_SUITE_README.md  USAGE.md  USER_MANUAL.md  WOKWI_QUICKSTART.md  combine_to_sketch.py  diagram.json  doc_BUTTON_RECEIVER_EXAMPLE.cpp  esp32_button.cpp  parse_tests.py  platformio.ini  run_tests.sh  sketch.ino  wokwi.toml  wokwi_single_file.ino
.github/: pull_request_template.md
include/constants/: NetworkConstants.h  SystemConstants.h
include/drivers/sw_sim/: SoftwareButton.h
include/interfaces/: IAlertSystem.h  IForceSensor.h  INetworkClient.h  INurseInput.h
include/models/: SensorPayload.h  SystemState.h
src/: esp32_button.cpp  main.cpp
src/drivers/archive/: ConnexxallWiFi.cpp  EspNetworkClient.h  LEDAlert.cpp  LEDAlert.h
src/drivers/real/: ArduinoNetworkClient.h  BlueCharmBLE.cpp  ConnexxallWiFi.cpp  NtfyHttpAlert.h  PhysicalButton.cpp  PhysicalButton.h  RealTekscan.cpp  RealTekscan.h  (+1 more)
src/drivers/real-basic/: RealPotentiometer.cpp  RealPotentiometer.h  RealTekscan.h
src/logic/: FallDetector.cpp  FallDetector.h  NtfyHttpAlert.h
src/util/: WiFiSetup.cpp
test/: Arduino.h  SerialImpl.cpp  TestConstants.cpp  TestConstants.h  test_state_machine.cpp
test/generators/: SensorDataGenerator.h
test/helpers/: MockSensors.h  TestFixture.h  TimeSimulator.cpp  TimeSimulator.h
test/integration/: NtfyHttpAlertTests.cpp
test/mocks/: NetworkClientSpy.h
(+5 files in other folders)
